[gd_scene load_steps=9 format=3 uid="uid://b4ka0uk4sp668"]

[ext_resource type="Script" path="res://scene/plane.gd" id="1_681av"]
[ext_resource type="Texture2D" uid="uid://ceko8hv6dxyj7" path="res://assets/Spritesheet/planes.png" id="1_e0jd1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u8i88"]
atlas = ExtResource("1_e0jd1")
region = Rect2(88, 73, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny2ow"]
atlas = ExtResource("1_e0jd1")
region = Rect2(88, 146, 88, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_boeh7"]
atlas = ExtResource("1_e0jd1")
region = Rect2(88, 219, 88, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_bd20x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8i88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boeh7")
}],
"loop": true,
"name": &"fly",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dk101"]
radius = 31.257

[sub_resource type="CircleShape2D" id="CircleShape2D_7xyxy"]
radius = 36.0139

[node name="Plane" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_681av")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = SubResource("SpriteFrames_bd20x")
animation = &"fly"
frame_progress = 0.102631
speed_scale = 0.8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_dk101")

[node name="GameOver" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7xyxy")

[connection signal="timeout" from="GameOver" to="." method="_on_game_over_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_collision_detection_body_entered"]
